[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "network_glance"
description = "Script to output various details about the network and hardware connected to the network."
readme = "README.md"
requires-python = ">=3.9"
license  = { text = "GNU General Public License v3.0"}
version = "0.0.1"
authors = [
    { name = "Henry James", email = "henryj320@gmail.com" }
]
# repository = "https://github.com/henryj320/network_glance"
dependencies = [
    "scapy"
]
# package-dir = {"" = "network_glance"}

[project.scripts]
net-glance = "network_glance.net_glance:run"

[project.optional-dependencies]  # Dependencies not installed by default. Have a variant with other functionalities
testing = [
    "pycodestyle",
    "pydocstyle",
    "tox",
    "scapy"
]
